bugfix: graphics float right > bp_lg to be aligned, added missing heading 4 to contact

--- a/src/global_styles.less
+++ b/src/global_styles.less
@@ -1522,6 +1522,10 @@ a{
 		.inline-block();
 		.border-radius(50%);
 		border: 1px solid #EAEAEA;
+
+		@media only screen and (min-width:@bp_lg){
+			.fr();
+		}
 	}
 
 	.dot-one{
@@ -1586,6 +1590,12 @@ a{
 .img-heart, .img-butterfly, .img-penguin{
 	.ta-c();
 	margin-top: 50px;
+
+	.rounded-border{
+		@media only screen and (min-width:@bp_lg){
+			float:none!important;
+		}
+	}
 
 	img{
 		width:80px;
@@ -1732,8 +1742,10 @@ a{
 	.regular-text{
 		margin-bottom:0px;
 		margin-top:0px;
+	}
 
-		&:last-child{
+	&:last-child{
+		.regular-text{
 			margin-bottom:20px;
 		}
 	}
